fix: add gap to main container

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,4 +12,6 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
+  height: 100%;
+  gap: 1rem;
 }
